compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_function_argument_if_panic_is_argument.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn wibble(_, _) { 1 }\n        pub fn main() {\n          wibble(panic, 1)\n        }"
---
----- SOURCE CODE

        pub fn wibble(_, _) { 1 }
        pub fn main() {
          wibble(panic, 1)
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:4:25
  │
4 │           wibble(panic, 1)
  │                         ^

This argument is unreachable because the previous one always panics. Your
code will crash before reaching this point.
