compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_function_call_if_panic_is_last_argument_1.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1736
expression: "\n        pub fn wibble(_, _) { 1 }\n        pub fn main() {\n          wibble(1, panic)\n          1\n        }"
---
----- SOURCE CODE

        pub fn wibble(_, _) { 1 }
        pub fn main() {
          wibble(1, panic)
          1
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:4:11
  │
4 │           wibble(1, panic)
  │           ^^^^^^

This function call is unreachable because its last argument always panics.
Your code will crash before reaching this point.
