compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_warning_doesnt_escape_out_of_a_block_if_panic_is_not_last.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1700
expression: "pub fn main() {\n          let n = {\n            panic\n            1\n          }\n          n\n        }"
---
----- SOURCE CODE
pub fn main() {
          let n = {
            panic
            1
          }
          n
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:4:13
  │
4 │             1
  │             ^

This code is unreachable because it comes after a `panic`.
