compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_warning_on_following_expression_if_panic_is_last_in_a_block.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1713
expression: "pub fn main() {\n          let _ = {\n            panic\n          }\n          1\n        }"
---
----- SOURCE CODE
pub fn main() {
          let _ = {
            panic
          }
          1
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:5:11
  │
5 │           1
  │           ^

This code is unreachable because it comes after a `panic`.
