compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_binary_operation_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  let string = \"a\" ++ \"b\" \"c\" ++ \"d\"\n  string\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let string = "a" ++ "b" "c" ++ "d"
  string
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.rakun:3:27
  │
3 │   let string = "a" ++ "b" "c" ++ "d"
  │                           ^^^^^^^^^^ This value is never used
