compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_destructure.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn a(b) { case b { #(c, _) -> 5 } }"
---
----- SOURCE CODE
pub fn a(b) { case b { #(c, _) -> 5 } }

----- WARNING
warning: Unused variable
  ┌─ /src/warning/wrn.rakun:1:26
  │
1 │ pub fn a(b) { case b { #(c, _) -> 5 } }
  │                          ^ This variable is never used

Hint: You can ignore it with an underscore: `_c`.
